# AdventOfCode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aoc_notes.md
2023/solution1/: main.cpp
2023/solution10/: main.cpp
2023/solution11/: main.cpp
2023/solution12/: main.cpp
2023/solution13/: main.cpp  main1.cpp
2023/solution14/: main.cpp
2023/solution15/: main.cpp
2023/solution16/: main.cpp
2023/solution17/: main.cpp
2023/solution18/: main.cpp
2023/solution19/: main.cpp  main1.cpp
2023/solution2/: main.cpp
2023/solution20/: graph.dot  main.cpp
2023/solution21/: main.cpp  main1.cpp
2023/solution22/: main.cpp
2023/solution23/: main.cpp
2023/solution24/: main.cpp
2023/solution25/: main.cpp
2023/solution3/: main.cpp
2023/solution4/: main.cpp
2023/solution5/: main.cpp  main1.cpp
2023/solution6/: main.cpp
2023/solution7/: main.cpp  main1.cpp
2023/solution8/: main.cpp
2023/solution9/: main.cpp
2024/solution1/: main.py
2024/solution10/: CMakeLists.txt  main.cpp
2024/solution11/: CMakeLists.txt  main.cpp
2024/solution12/: CMakeLists.txt  main.cpp
2024/solution13/: main.cpp  (+2 more)
2025/: .clang-format  CMakeLists.txt
2025/aoc_utils/: CMakeLists.txt
2025/aoc_utils/include/aoc_utils/: field.h  io_helpers.h  point.h
2025/aoc_utils/src/: field.cpp
2025/solution01/: main.py
2025/solution02/: .gitignore  main.hs
2025/solution03/: CMakeLists.txt  main.cpp
2025/solution04/: CMakeLists.txt  main.cpp
2025/solution05/: CMakeLists.txt  main.cpp  splitOn.hs
2025/solution06/: CMakeLists.txt  main.cpp
2025/solution07/: CMakeLists.txt  main.cpp
2025/solution08/: CMakeLists.txt  main.cpp
2025/solution09/: CMakeLists.txt  main.cpp  main.py
2025/solution10/: CMakeLists.txt  example_input.txt  main.cpp
2025/solution11/: CMakeLists.txt  example_input3.txt  main.cpp  main.py
2025/solution12/: CMakeLists.txt  example_input.txt  main.cpp
solution1/: main.cpp
solution16/: main.cpp
solution17/: main.cpp
solution18/: main.cpp
solution19/: input_sample.txt  main1.cpp
solution2/: main.cpp
solution20/: main.cpp
solution21/: main1.cpp
solution22/: main.cpp
solution23/: main.cpp
solution24/: main.cpp
solution3/: main.cpp
solution4/: main.cpp
solution5/: main.cpp  main1.cpp
solution6/: main.cpp
solution7/: main.cpp  main1.cpp
solution8/: main.cpp
(+40 files in other folders)
