cmake_minimum_required(VERSION 3.5)

project(AOC_2025)

add_subdirectory(aoc_utils)

add_subdirectory(solution03)
add_subdirectory(solution04)
add_subdirectory(solution05)
add_subdirectory(solution06)
add_subdirectory(solution07)
add_subdirectory(solution08)
add_subdirectory(solution09)
add_subdirectory(solution10)
add_subdirectory(solution11)
add_subdirectory(solution12)
